--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_login" />
         <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_profile" />
+        <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
