--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_login"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_login_24"
             android:title="@string/menu_login" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_profile" />
         <item
             android:id="@+id/nav_gallery"
@@ -24,5 +24,9 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_baseline_close_24"
+            android:title="@string/menu_logout" />
     </group>
 </menu>
