--- a/WhackAQuack/app/src/main/res/layout/fragment_profile.xml
+++ b/WhackAQuack/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,7 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="Save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
