added related files for the Touch / Gesture lesson

--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,13 +17,10 @@
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_game"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="@string/menu_game" />
+
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_baseline_close_24"
