--- a/WhackAQuack/app/src/main/res/layout/fragment_game.xml
+++ b/WhackAQuack/app/src/main/res/layout/fragment_game.xml
@@ -29,5 +29,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home" />
+        app:layout_constraintTop_toBottomOf="@+id/text_save_score" />
 </androidx.constraintlayout.widget.ConstraintLayout>
