--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,14 @@
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_profile" />
         <item
+            android:id="@+id/nav_history"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="History" />
+        <item
+            android:id="@+id/nav_save_score"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="Save Score Sample" />
+        <item
             android:id="@+id/nav_game"
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_game" />
