--- a/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
+++ b/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,6 +22,16 @@
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
+        android:id="@+id/nav_history"
+        android:name="njit.mt.whackaquack.ui.history.HistoryFragment"
+        android:label="History"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/nav_save_score"
+        android:name="njit.mt.whackaquack.ui.example.SaveScoreFragment"
+        android:label="Save Score Sample"
+        tools:layout="@layout/fragment_save_score" />
+    <fragment
         android:id="@+id/nav_game"
         android:name="njit.mt.whackaquack.ui.game.GameFragment"
         android:label="@string/menu_game"
