--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,10 @@
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="Save Score Sample" />
         <item
+            android:id="@+id/nav_ds"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="Data Store Sample" />
+        <item
             android:id="@+id/nav_game"
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_game" />
