--- a/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
+++ b/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,6 +32,11 @@
         android:label="Save Score Sample"
         tools:layout="@layout/fragment_save_score" />
     <fragment
+        android:id="@+id/nav_ds"
+        android:name="njit.mt.whackaquack.ui.data.DataStoreFragment"
+        android:label="Data Store Sample"
+        tools:layout="@layout/fragment_datastore" />
+    <fragment
         android:id="@+id/nav_game"
         android:name="njit.mt.whackaquack.ui.game.GameFragment"
         android:label="@string/menu_game"
