--- a/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
+++ b/WhackAQuack/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,10 @@
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_game" />
         <item
+            android:id="@+id/nav_shop"
+            android:icon="@drawable/ic_baseline_edit_24"
+            android:title="@string/menu_shop" />
+        <item
             android:id="@+id/nav_stats"
             android:icon="@drawable/ic_baseline_edit_24"
             android:title="@string/menu_stats" />
