--- a/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
+++ b/WhackAQuack/app/src/main/res/navigation/mobile_navigation.xml
@@ -42,6 +42,11 @@
         android:label="@string/menu_game"
         tools:layout="@layout/fragment_game" />
     <fragment
+        android:id="@+id/nav_shop"
+        android:name="njit.mt.whackaquack.ui.shop.ShopFragment"
+        android:label="@string/menu_shop"
+        tools:layout="@layout/fragment_shop" />
+    <fragment
         android:id="@+id/nav_stats"
         android:name="njit.mt.whackaquack.ui.stats.StatsFragment"
         android:label="@string/menu_stats"
